--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 	<%= csrf_meta_tags %>
 
 </head>
-<body>
+<body <%= yield :body_class %>>
 
 	<div class="topBar">
 		<div class="navbar navbar-fixed-top">
