Added the creation and showing of private events. Need to see if a email message has to be sent to the creator of the event with the URL

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -472,4 +472,16 @@
 	margin-top: 10px;
 	color: #fff;
 }
-
+.event_type_radio
+{
+	margin-top: 10px;
+}
+.event_radio
+{
+	float: left;
+}
+.event_radio_label
+{
+	float: left;
+	margin: 0 10px 0 5px;
+}
