--- a/app/views/groups/_event_index.html.erb
+++ b/app/views/groups/_event_index.html.erb
@@ -1,6 +1,6 @@
 <div class="group">
 	<div class="image">
-		<%# image_tag group.group_image %>		
+		<%= image_tag group.group_image %>		
 		<h4>800 members</h4>	
 		<h4 class="group_category">Food</h4>
 	</div>
