--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -160,8 +160,11 @@
     <h3>Invite your friends</h3>
   </div>
   <div class="modal-body">
-    <%= render :partial => "user_invites/form",
+    <% if @just_joined == true %>
+      <%= render :partial => "user_invites/form",
                       :locals => {:user_id => current_user.id, :event_id => @event.id} %>
+    <% end %>
+    
   </div>
   <div class="modal-footer">
     <a href="#" class="large awesome green" id="friends_invite">Invite friends</a>
