Modified the emailer that is sent out when a person is invited to attended a private event. The email now includes the address for the private event

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -154,7 +154,10 @@
 	color: #080809;	
 	text-shadow: 0px 1px 2px #404046;
 }
-
+.locationpicker
+{
+	margin-top: 10px;
+}
 .slider
 {
 	margin-top: -170px;
