Added code to send out an email when a new event is created

--- a/app/views/notifications/event_join.html.erb
+++ b/app/views/notifications/event_join.html.erb
@@ -6,9 +6,15 @@
 	</tr>
 	<tr style="margin-bottom: 10px;">
 		<td>
+			<h2>The details of the event are as follows</h2>
 			<h4>Event Location: <%= @restaurant.address %> </h4>
 			<h4>Event Date: <%= @event.event_date %> </h4>
-			<h4>Event URL: <a href="<%= event_url(@event, :host => "letsdine.co") %>">See the event</a></h4>
+			<h4> Event URL: 
+			<% if @event.event_type == 'private' %>
+				<a href="letsdine.co/events/<%= @event.token %>">See the event</a>
+			<% else %>
+				<%= event_url(@event, :host => "letsdine.co") %>
+			<% end %>
 		</td>
 	</tr>
 </table>
