Added a city field to the new event form

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -24,6 +24,10 @@
       <p id="public_event_description">Anyone can sign up for this event and will be accessible across the site</p>
       <br/>
       <div class="field">
+        <%= f.label :city %>
+        <%= f.text_field :city %>
+      </div>
+      <div class="field">
         <%= f.label :event_name %>
         <%= f.text_field :event_name %>
       </div>
