Fixed the issue where the city was not being stored

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :javascript do %>
     <%= javascript_include_tag "closed-event-overlay" %>
 <% end %>
-
+<h1>The city is:<%= request.location.city %> </h1>
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
