Added a form on the homepage so that an user can add their email address to be notified when we start in their city

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -5,6 +5,29 @@
     </div>
   </div>
 </div>
+<!--
+<ul class="nav nav-tabs" id="myTab">
+  <li class="active"><a href="#home">Home</a></li>
+  <li><a href="#profile">Profile</a></li>
+  <li><a href="#messages">Messages</a></li>
+  <li><a href="#settings">Settings</a></li>
+</ul>
+
+<div class="span12">
+  <div class="tab-content">
+    <div class="tab-pane active" id="home">First pane</div>
+    <div class="tab-pane" id="profile">Second pane</div>
+    <div class="tab-pane" id="messages">Third pane</div>
+    <div class="tab-pane" id="settings">Fourth pane</div>
+  </div>
+</div>
+-->
+
+<script>
+  $(function () {
+    $('#myTab a:first').tab('show');
+  })
+</script>
 
 
 <div class="container">
