Added a how it works to the homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,6 +26,48 @@
     </div>
 </div>
 
+<div class="container">
+    <div class="row-fluid">
+        <div class="span12">
+            <h1>How it works</h1>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row-fluid">
+
+        <div class="span4">
+            <div class="headerImage-red">
+                
+            </div>
+            <h4>Create events</h4>
+            <p>
+                Create public events where anyone can join or private events where only people you invite can join. At a time and places that suits you.
+            </p>
+        </div>
+
+        <div class="span4">
+            <div class="headerImage-blue">
+            </div>
+            <h4>Join events</h4>
+            <p>
+                Join events where people share your interests. For example a foodie event or a start up event or many more.
+            </p>
+        </div>
+
+        <div class="span4">
+            <div class="headerImage-green">
+            </div>
+            <h4>Share events</h4>
+            <p>
+                Events are better with friends, so invite some of them to join you for an event.
+            </p>
+        </div>
+
+    </div>
+</div>
+
 <div class="content">
         <div class="container">
             <% eventCount = 0 %>
