--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -36,8 +36,8 @@
 }
 .masthead
 {
-	margin-top: 110px;
-	background: url("/assets/headerBG.png");
+	margin-top: 120px;
+	
 }
 .homepage 
 {
@@ -48,6 +48,30 @@
 	margin-bottom: 200px;
 	font-size: 18px;
 	text-shadow: 0px 0px 1px #647575;
+}
+.headerImage-red
+{
+	background: url(/assets/eventIcon.png) no-repeat center center;
+	background-color: rgba(221,65,36,.5);
+	min-height: 110px;
+	min-width: 110px;
+
+}
+.headerImage-blue
+{
+	background: url(/assets/joinEvent.png) no-repeat center center;
+	background-color: rgba(27,110,138,.5);
+	min-height: 110px;
+	min-width: 110px;
+
+}
+.headerImage-green
+{
+	background: url(/assets/shareEvent.png) no-repeat center center;
+	background-color: rgba(131,202,33,.5);
+	min-height: 110px;
+	min-width: 110px;
+
 }
 .homepage li 
 {
