Added a city field to the sign up page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,11 @@
 				  <div><%= f.label :name %>
 				  <%= f.text_field :name, :autofocus => true %></div>
 
+				  <div>
+				  	<%= f.label :city %>
+				  	<%= f.text_field :city %>
+				  </div>
+
 				  <div><%= f.label :email %>
 				  <%= f.email_field :email %></div>
 
