--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,6 +29,7 @@
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
+            <h1>City: <%= request.location.city %> </h1>
             <h1>How it works</h1>
         </div>
     </div>
