Added a select your city option to the city select

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,9 +34,10 @@
         			<div class="row-fluid">
         				<div class="span3">
         					<select name="city-selector" class="locationpicker" id="city-select">
-							    <option>Hyderabad</option>
-							    <option>Mumbai</option>
-							    <option>Ahmedabad</option>
+        						<option>Select your city</option>
+							    <option value="Hyderabad">Hyderabad</option>
+							    <option value="Mumbai">Mumbai</option>
+							    <option value="Ahmedabad">Ahmedabad</option>
 							  </select>
         				</div>
         				<div class="span6"><img src="/assets/logo.png"></div>
