--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,31 +5,6 @@
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
-            <div class="zoomflow">
-                <div class="items">
-                    <% @header_events.each do |event| %>
-                        <% restaurant = Restaurant.find(event.restaurant_id) %>
-                        <% if event.event_image.blank? %>
-                            <div class="item-tobe" data-source="<%= restaurant.photo_url.to_s %>">
-                        <% else %>
-                            <div class="item-tobe" data-source="<%= event.event_image_url.to_s %>">
-                        <% end %>
-                            <div class="captionCon">
-                                <div style="left: 51%; top: 55px; width:260px;" data-delay="secs0-5" data-effect=" unblur-white unscale fade" class="caption style_bigtitle"> <%= event.event_name %>
-                                </div>
-                            </div>
-                        </div>    
-                    <% end %>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-    <div class="row-fluid">
-        <div class="span12">
-            <h1>City: <%= request.location.city %> </h1>
             <h1>How it works</h1>
         </div>
     </div>
@@ -66,6 +41,14 @@
             </p>
         </div>
 
+    </div>
+</div>
+
+<div class="container">
+    <div class="row-fluid">
+        <div class="span12">
+            <h1>Events</h1>
+        </div>
     </div>
 </div>
 
@@ -142,6 +125,8 @@
         </div>
     </div>   
 
+
+
 <div id="communication" class="modal hide fade">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -159,8 +144,6 @@
             <%= f.label :email %>
             <%= f.text_field :email, :placeholder => "Enter your email address" %>
         </div>    
-    
-      
 
   </div>
   <div class="modal-footer">
@@ -170,7 +153,8 @@
 </div>
 
 
-<% if @no_events_in_city == false %>
+
+<% if @no_events_in_city == true %>
     <script>
     $(document).ready(function(){
       $('#communication').modal('show');
