Modified the home page how it works text.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,8 +19,9 @@
             </div>
             <h4>Create events</h4>
             <p>
-                Create public events where anyone can join or private events where only people you invite can join. At a time and places that suits you.
+                Create a dining event to meet. interact and network with like-minded people from your city! Or create a dining event to meet family and friends for all you special occasions.
             </p>
+            <a href=""></a>
         </div>
 
         <div class="span4">
@@ -28,16 +29,16 @@
             </div>
             <h4>Join events</h4>
             <p>
-                Join events where people share your interests. For example a foodie event or a start up event or many more.
+                Browse all dining events happening in your city and and join the events that interest you.
             </p>
         </div>
 
         <div class="span4">
             <div class="headerImage-green">
             </div>
-            <h4>Share events</h4>
+            <h4>Join the community</h4>
             <p>
-                Events are better with friends, so invite some of them to join you for an event.
+                Sign up for a free account and we will keep you informed about all the events that happen in your city.
             </p>
         </div>
 
