Fixing a error in the text in the homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
             </div>
             <h4>Create events</h4>
             <p>
-                Create a dining event to meet. interact and network with like-minded people from your city! Or create a dining event to meet family and friends for all you special occasions.
+                Create a dining event to meet, interact and network with like-minded people from your city! Or create a dining event to meet family and friends for all your special occasions.
             </p>
             <a href=""></a>
         </div>
