--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -29,6 +29,10 @@
                             </div>    
                         <% end %>
                         <h3><%= link_to event.event_name, event_path(event) %></h3>
+                        <div class="seats_left_event_page">
+                            <% seats_left = event.max_seats - Attendee.where(:event_id => event.id).count %>
+                            <%= seats_left %> Seats left
+                        </div>
                         <div class="eventDetails">
                             <div class="detail">
                                 <img src="/assets/locationIcon.png">
