--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,11 +84,16 @@
                         <% end %>
                         
                         <h3><%= link_to event.event_name, event_path(event) %></h3>
+                        <div class="seats_left_event_page">
+                            <% seats_left = event.max_seats - Attendee.where(:event_id => event.id).count %>
+                            <%= seats_left %> Seats left
+                        </div>
                         <div class="eventDetails">
                             <div class="detail">
                                 <img src="/assets/locationIcon.png">
                                 <%= restaurant.name %>
                             </div>
+
                             <div class="detail">
                                 <img src="/assets/timeIcon.png">
                                 <%= event.event_date.strftime("%d %B %Y") %>
