--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_field :address %>
   </div>
   <div class="field">
+    <%= f.label :city %>
+    <%= f.text_field :city %>
+  </div>
+  <div class="field">
     <%= f.label :cusine %>
     <%= f.text_field :cusine %>
   </div>
