--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -52,9 +52,13 @@
 	margin-bottom: 0;
 	border: none;
 }
+.selected_city
+{
+	color: #fff;
+}
 .masthead
 {
-	margin-top: 120px;
+	margin-top: 160px;
 	background: url("/assets/headerBG.png");
 }
 .createEventButtonContainer
