--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,10 @@
 							  <% end %>
 							  
         				</div>
-        				<div class="span5"><img src="/assets/logo.png"></div>
+        				<div class="span5 logo">
+        					<img src="/assets/logo.png">
+        					<h4>Meet great people over great food</h4>
+        				</div>
         				<div class="span3 loginDetails">
         					<div class="loginOptions">
         						<% if user_signed_in? %>
@@ -68,7 +71,7 @@
         		<div class="container tagline-container">
         			<div class="row-fluid">
         				<div class="span5 offset4 tagline">
-        					<h4>Meet great people over great food</h4>
+        					
         				</div>
         			</div>
         		</div>
