--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -85,7 +85,7 @@
                         
                         <h3><%= link_to event.event_name, event_path(event) %></h3>
                         <div class="seats_left_event_page">
-                            <% seats_left = event.max_seats - Attendee.where(:event_id => event.id).count %>
+                            <% seats_left = event.max_seats - Attendee.where(:event_id => event.id).pluck(:seats).sum %>
                             <%= seats_left %> Seats left
                         </div>
                         <div class="eventDetails">
