Fixing the events index page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -30,9 +30,10 @@
                         <% end %>
                         <h3><%= link_to event.event_name, event_path(event) %></h3>
                         <div class="seats_left_event_page">
-                            <% if (Attendee.where(:event_id => event.id).pluck(:seats).sum).nil?%>
+                            <% if Attendee.where(:event_id => event.id).nil?%>
                                 <% seats_left = event.max_seats %>    
                             <% else %>
+
                                 <% seats_left = event.max_seats - Attendee.where(:event_id => event.id).pluck(:seats).sum %>
                             <% end %>
                             <%= seats_left %> Seats left
