Fixed the issue where the restaurants in the city where not showing up when the city selection was changed inm the new event form. This happened when a user went back using the wizard nav

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -30,8 +30,11 @@
 	$(document).ready(function(){
 		$('#city').change(function(){
 			var selected_city = $('#city :selected').val();
+			$('.restaurantDetailsCotaniner').addClass('restaurant_hidden');
+			$('.menuItems').hide();
 			class_to_find = '.'+selected_city;
 			$(class_to_find).removeClass('restaurant_hidden');
+			//$('.restaurantMenu').show();
 		});
 	});
 </script>
