Added js files that were left out of the precompile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
 	<%= javascript_include_tag "bootstrap-datepicker" %>
 	<%= javascript_include_tag "bootstrap-timepicker" %>
 	<%= javascript_include_tag "zoomflow/zoomflow.dev" %>
+	<%= javascript_include_tag "closed-event-overlay" %>
 	<%= yield :javascript %>	
 	
 	<%= csrf_meta_tags %>
