--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,9 @@
+<% content_for :javascript do%>
+	<%= javascript_include_tag "restaurant_picker" %>
+	<%= javascript_include_tag "events" %>
+<% end %>
+
+
 <div class="content">
     <div class="container">
         <div class="row-fluid">
